--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>comparator</module>
         <module>thread</module>
         <module>logging</module>
+        <module>Date</module>
     </modules>
 
     <dependencies>
